--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,27 +3,55 @@
 @import 'tailwindcss/utilities';
 
 
+:root {
+  --box-shadow-color-red: rgba(255, 0, 0, 0.381);
+  --box-shadow-color-blue: rgba(0, 183, 255, 0.381);
+  --box-shadow-color-blue2: rgba(88, 157, 185, 0.381);
+  --box-shadow-color-gray: rgba(153, 153, 153, 0.845);
+  --box-shadow-color-green: rgb(160, 220, 120);
+  --box-shadow-color-yellow: rgba(222, 210, 72, 0.801);
+  --box-shadow-color-purple: rgba(199, 129, 201, 0.603);
+}
+
+/* Dark Mode */
+.dark {
+  --box-shadow-color-red: rgba(83, 18, 18, 0.589);
+  --box-shadow-color-blue: rgba(16, 61, 79, 0.578);
+  --box-shadow-color-blue2: rgba(25, 40, 95, 0.582);
+  --box-shadow-color-gray: rgba(65, 63, 63, 0.514);
+  --box-shadow-color-green: rgba(46, 82, 23, 0.429);
+  --box-shadow-color-yellow: rgba(69, 64, 19, 0.555);
+  --box-shadow-color-purple: rgba(25, 40, 95, 0.582);
+}
+
+/* Shadow Styles */
 .shadow-red {
-    box-shadow: 0 9px 20px 0 rgba(255, 0, 0, 0.381);
-  }
-  .shadow-blue {
-    box-shadow: 0 9px 20px 0 rgba(0, 183, 255, 0.381);
-  }
-  .shadow-blue2 {
-    box-shadow: 0 9px 20px 0 rgba(88, 157, 185, 0.381);
-  }
-  .shadow-gray {
-    box-shadow: 0 9px 20px 0 rgba(153, 153, 153, 0.845);
-  }
-  .shadow-green {
-    box-shadow: 0 9px 20px 0 rgb(160, 220, 120);
-  }
-  .shadow-yellow {
-    box-shadow: 0 9px 20px 0 rgba(222, 210, 72, 0.801);
-  }
-  .shadow-purple {
-    box-shadow: 0 9px 30px 0 rgba(199, 129, 201, 0.603);
-  }
+  box-shadow: 0 9px 20px 0 var(--box-shadow-color-red);
+}
+
+.shadow-blue {
+  box-shadow: 0 9px 20px 0 var(--box-shadow-color-blue);
+}
+
+.shadow-blue2 {
+  box-shadow: 0 9px 20px 0 var(--box-shadow-color-blue2);
+}
+
+.shadow-gray {
+  box-shadow: 0 9px 20px 0 var(--box-shadow-color-gray);
+}
+
+.shadow-green {
+  box-shadow: 0 9px 20px 0 var(--box-shadow-color-green);
+}
+
+.shadow-yellow {
+  box-shadow: 0 9px 20px 0 var(--box-shadow-color-yellow);
+}
+
+.shadow-purple {
+  box-shadow: 0 9px 30px 0 var(--box-shadow-color-purple);
+}
 
    /* ============   OTA>CREATE  =========== */
    .form-container {
@@ -134,8 +162,9 @@
     color: #222;
   }
   
-  .table-bordered-ota {
+  /* .table-bordered-ota {
     border-collapse: collapse;
+    border-radius: 50px;
     width: 100%;
   }
   
@@ -143,7 +172,7 @@
   .table-bordered-ota td {
     border: 1px solid #ddd;
     padding: 8px;
-  }
+  } */
   
   .pull-right-ota {
     float: right;
